firmware/lib/control-table/tests/ui/table_unknown_key.stderr
error: unknown ct_table key (expected `max_sram` or `hooks`)
  --> tests/ui/table_unknown_key.rs:31:29
   |
31 | #[ct_table(max_sram = 1024, nope = 1)]
   |                             ^^^^
